=========================================================================
CHANGE LOG
=========================================================================

2009-03-11 Warren L. DeLano <warren@delsci.com>	

	* front and back colors, label_color now defaults to front
	
	* fixed object duplication deadlock bug

	* show_frame_rate setting
	
	* valence_mode=1 setting for nicer valence display
	
2009-03-10 Warren L. DeLano <warren@delsci.com>	

	* dynamic_width settings and defaults
	
2009-03-06 Warren L. DeLano <warren@delsci.com>	

	* addressed problem reading mmod files
	
2009-02-08 Warren L. DeLano <warren@delsci.com>	

	* refactored multisave commmand

	* improved read-in performance for concatenated PDB files
	
2009-02-08 Warren L. DeLano <warren@delsci.com>	

	* fixed stupid load-from-URL bug...
	
	* GZ compression support for common input formats
	
	* confirmed DLP Stereo 3D support

	* fixed ray-tracing for checkboard, byrow, & bycolumn stereo 3D
	
2009-02-06 Warren L. DeLano <warren@delsci.com>	

	* saving .dat and .out now also default to mmod format
	
	* extensive reworking of stereo 3D code to enable new encodings
	
2009-01-14 Warren L. DeLano <warren@delsci.com>

	* found & fixed longstanding issue with psize.py in APBS plugin
	
	* eliminated alternative conformation identifiers from PQR files
	
2009-01-09 Warren L. DeLano <warren@delsci.com>

	* added PyMOL> prompt to the Tk Window

	* addressed a couple of minor file saving issues
	
2009-01-05 Warren L. DeLano <warren@delsci.com>

	* removing old X11-hybrid kludge, fixed a few python issues
	
	* default .mpg extension handling for MPEG export
	
2009-01-02 Warren L. DeLano <warren@delsci.com>

	* fixed click-through toggle for Leopard

2009-12-31 Warren L. DeLano <warren@delsci.com>

	* various changes associated with getting 1.2b0 out the door
	
2008-12-23 Warren L. DeLano <warren@delsci.com>

	* fixed tk-based session save problems reported by DB
	
2008-12-16 Warren L. DeLano <warren@delsci.com>
